[gd_scene load_steps=6 format=3 uid="uid://dgsn20gwh30dh"]

[ext_resource type="Texture2D" uid="uid://b2pmol6v225he" path="res://Assets/t-rex_default.png" id="1_2b3qo"]
[ext_resource type="Script" path="res://Scripts/Boss_mob.gd" id="1_mvs3a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aeejd"]
radius = 42.0
height = 188.0

[sub_resource type="SpriteFrames" id="SpriteFrames_qomso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2b3qo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q5mrk"]
radius = 341.001

[node name="BossMob" type="RigidBody2D"]
collision_layer = 3
collision_mask = 2
mass = 1000.0
gravity_scale = 0.0
freeze = true
contact_monitor = true
max_contacts_reported = 1000
script = ExtResource("1_mvs3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_aeejd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_qomso")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_q5mrk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
